# opengl-tutorial

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  main.cpp
lib/: libGLEWd.2.2.0.dylib
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Triangle.cpp  frag.glsl  main.cpp  shader.cpp  shader.h  vertex_shader.glsl
src/common/: controls.cpp  controls.h
